# urdf2collisionobject

./: CMakeLists.txt  package.xml
config/: object_deployment.yaml  test.yaml
include/urdf2collisionobject/: urdf2collisionobject.hpp
scripts/: load_to_gazebo.py  object_loader
src/lib/: urdf2collisionobject.cpp
src/node/: test.cpp
urdf/: cube.xacro
