<?xml version="1.0"?>
<package format="2">
  <name>urdf2collisionobject</name>
  <version>0.0.0</version>
  <description>The urdf2collisionobject package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fraunhoferlab@todo.todo">fraunhoferlab</maintainer>
  <license>D</license>
  <license>O</license>
  <license>O</license>
  <license>T</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>Eigen3</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>kdl_parser</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
