<?xml version="1.0"?>
<package format="2">
  <name>urdf2collisionobject</name>
  <version>0.0.0</version>
  <description>The urdf2collisionobject package</description>
  <maintainer email="rafaelrojasmiliani@gmail.com">Rafael A. Rojas</maintainer>
  <license>APACHE2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>Eigen3</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>kdl_parser</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>moveit_msgs</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>std_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
